# Translatable-Enums

./: .gitignore  .isort.cfg  Makefile  README.md  main.py  pyproject.toml
docs/: CHANGELOG.md
examples/: example_common.py  example_with.py
i18n/: __init__.py  __main__.py  constants.py  enums.py  settings.py  tools.py  types.py
i18n/utils/clsutils/: __init__.py  generators.py
i18n/utils/gettext/: __init__.py  contexts.py  shortcuts.py
i18n/utils/imputils/: __init__.py  utils.py
i18n/utils/potfile/: __init__.py  constants.py  potfile.py  types.py
resources/languages/en/LC_MESSAGES/: app.po
resources/languages/fr/LC_MESSAGES/: app.po
tests/i18n/: test_tools.py  test_translatable_enum.py
tests/languages/uk/LC_MESSAGES/: app.po
tests/utils/: test_clsutils.py  test_gettext_utils.py  test_imputils.py  test_potfile.py
