[tool.poetry]
name = "translatable-enums"
version = "0.0.2"
description = "Translatable-Enums is a i18n tool which uses built-in Enums as an convenient way to store translation keys."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "i18n" },
]
homepage = "https://github.com/CrazyProger1/Translatable-Enums"
repository = "https://github.com/CrazyProger1/Translatable-Enums"
documentation = "https://github.com/CrazyProger1/Translatable-Enums"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

